--- a/src/estilos/AdminPantalla.css
+++ b/src/estilos/AdminPantalla.css
@@ -1,6 +1,7 @@
 .admin-layout {
   display: flex;
   height: 100vh;
+  
 }
 
 .content {
@@ -8,4 +9,5 @@
   padding: 1.5rem;
   background-color: #f4f4f4;
   overflow-y: auto;
+  width: 100%;
 }
