--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
+  /* place-items: center; */
   min-width: 320px;
   min-height: 100vh;
 }
@@ -38,7 +38,7 @@ h1 {
   line-height: 1.1;
 }
 
-button {
+button {  
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
