arreglo sideBar y Agrego Estadisticas

--- a/src/estilos/Sidebar.css
+++ b/src/estilos/Sidebar.css
@@ -42,3 +42,11 @@
 .sidebar .logout:hover {
   text-decoration: underline;
 }
+.sidebar ul li a svg {
+  margin-right: 8px;
+  vertical-align: middle;
+}
+.logout svg {
+  margin-right: 8px;
+  vertical-align: middle;
+}
