--- a/src/estilos/ProductosCategoriaCliente.css
+++ b/src/estilos/ProductosCategoriaCliente.css
@@ -123,3 +123,21 @@
     width: 100%;
   }
 }
+/* grises y overlay de "Sin Stock" */
+.cpp-card.no-stock {
+  position: relative;
+  /*pointer-events: none;*/
+  opacity: 0.5;
+}
+.cpp-card.no-stock::after {
+  content: "SIN STOCK😢";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  background: rgba(255,255,255,0.9);
+  padding: 0.2em 0.5em;
+  font-weight: bold;
+  color: #c00;
+  border-radius: 4px;
+}
