--- a/src/estilos/OrdenesPantalla.css
+++ b/src/estilos/OrdenesPantalla.css
@@ -11,9 +11,11 @@
 .buscador-contenedor {
   display: flex;
   justify-content: flex-end;
-  margin-bottom: 20px;
+  margin-bottom: 0px;
 }
-
+h2{
+  margin-top: 0px;
+}
 .buscador input {
   width: 100%;
   padding: 8px 36px 8px 12px; /* espacio a la derecha para la lupa */
@@ -50,7 +52,7 @@
   flex-wrap: wrap;
   justify-content: center; /* Centra los botones horizontalmente */
   gap: 10px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   height: 35px;
 }
 
