--- a/src/estilos/SidebarCliente.css
+++ b/src/estilos/SidebarCliente.css
@@ -94,3 +94,14 @@
   border: none;
   border-top: 1px solid #eee;
 }
+
+.sb-btn-link {
+  background: none;
+  border: none;
+  color: inherit;
+  font: inherit;
+  padding: 0;
+  cursor: pointer;
+  text-align: left;
+  width: 100%;
+}
