separo clase table orden modal estilos

--- a/src/estilos/ModalOrden.css
+++ b/src/estilos/ModalOrden.css
@@ -134,13 +134,13 @@
   flex: 1 1 40%;
 }
 
-table {
+.modal-contenido table {
   width: 100%;
   border-collapse: collapse;
   background: white;
 }
 
-table th, table td {
+.modal-contenido table th, .modal-contenido table td {
   padding: 8px;
   border: 1px solid #ddd;
   text-align: left;
