--- a/src/estilos/DomiciliosPage.css
+++ b/src/estilos/DomiciliosPage.css
@@ -3,6 +3,9 @@
   max-width: 800px;
   margin: 2rem auto;
   padding: 0 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .dp-header {
@@ -16,12 +19,12 @@
   margin: 0;
 }
 
-.btn-add {
-  background: #007bff;
+.dp-header .btn-add {
+  background: #8B1414;
   color: white;
   border: none;
   padding: 0.5rem 0.75rem;
-  border-radius: 4px;
+  border-radius: 10px;
   cursor: pointer;
 }
 
@@ -38,6 +41,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border: 1px solid #333;
 }
 
 .dp-item-info {
@@ -86,4 +90,15 @@
 .dom-empty-img {
   max-width: 60%;
   height: auto;
+}
+
+.btn-back {
+  background-color: #8B1414;
+  color: #fff;
+  width: fit-content;
+  padding: 1rem;
+  border: none;
+  border-radius: 10px;
+  margin: 0 auto;
+  cursor: pointer;
 }
