--- a/src/estilos/Footer.css
+++ b/src/estilos/Footer.css
@@ -5,11 +5,11 @@
   justify-content: center;
   align-items: center;
   display: flex;
-  padding: 1rem;
+  padding: 1.5rem;
   font-size: 0.9rem;
-  position: fixed;
-  bottom: 0;
+  /* position: fixed;
+  bottom: 0; */
   width: 100%;
-  z-index: 1000;
+  z-index: 10;
   height: 20px;
 }
