--- a/src/estilos/OrdenesPantalla.css
+++ b/src/estilos/OrdenesPantalla.css
@@ -4,29 +4,46 @@
   padding-top: 0px;
   margin: 0 auto; /* Centra todo el contenido horizontalmente */
 }
+
+.ordenes-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 2rem 0 2rem;
+}
+
+.ordenes-header h2 {
+  color: #fff;
+}
+
 .buscador {
   position: relative;
   width: 220px;
-  
 }
+
 .buscador-contenedor {
   display: flex;
   justify-content: flex-end;
   margin-bottom: 0px;
 }
-.ordenes-container h2{
+/* .ordenes-container h2{
   margin-top: 0px;
-}
+} */
 .buscador input {
-  width: 100%;
-  padding: 8px 36px 8px 12px; /* espacio a la derecha para la lupa */
+  /* width: 100%;
+  padding: 8px 36px 8px 12px; espacio a la derecha para la lupa
   border-radius: 20px;
   border: 1px solid #ddba6e;
-  background-color: #ffd476; /* amarillo suave */
+  background-color: #ffd476; amarillo suave
   outline: none;
   font-size: 14px;
   color: #333;
-  transition: box-shadow 0.3s ease;
+  transition: box-shadow 0.3s ease; */
+  border-radius: 50px;
+  border: 1px solid #000;
+  font-size: 1rem;
+  padding: 0.6rem 1rem;
+  margin-right: 10px;
 }
 
 .buscador input::placeholder {
@@ -48,6 +65,10 @@
   pointer-events: none;
 }
 
+.ordenes-header, .filtros {
+  background: #8b1414;
+}
+
 .filtros {
   display: flex;
   flex-wrap: wrap;
@@ -55,6 +76,7 @@
   gap: 10px;
   margin-bottom: 10px;
   height: 35px;
+  padding: 3rem;
 }
 
 .filtros button {
