--- a/src/estilos/ProductosCategoriaCliente.css
+++ b/src/estilos/ProductosCategoriaCliente.css
@@ -104,7 +104,7 @@
 }
 
 /* Botón “Volver” */
-.btn-add {
+/* .btn-add {
   display: inline-block;
   margin-top: 2rem;
   color: #333;
@@ -112,7 +112,7 @@
 }
 .btn-add:hover {
   text-decoration: underline;
-}
+} */
 
 /* Responsive tweaks */
 @media (max-width: 600px) {
