--- a/src/estilos/TablaUsuarios.css
+++ b/src/estilos/TablaUsuarios.css
@@ -6,7 +6,7 @@
   margin-bottom: 1rem;
   background-color: #8b1414;
   color: #fff;
-  padding: 0 1rem;
+  padding: 1rem;
 }
 
 .usuarios-buscador {
