--- a/src/estilos/SucursalesTabla.css
+++ b/src/estilos/SucursalesTabla.css
@@ -18,7 +18,7 @@
   margin-bottom: 1rem;
   background-color: #8b1414;
   color: #fff;
-  padding: 0 1rem;
+  padding: 1rem;
 }
 
 .sucursales-header h2 {
