--- a/src/estilos/CarruselCategorias.css
+++ b/src/estilos/CarruselCategorias.css
@@ -1,7 +1,8 @@
 /* src/estilos/CarruselCategorias.css */
 
 .cc-container {
-  position: relative;
+  position: relative;      /* para que el z-index surta efecto */
+  z-index: 0 ;   /* en todos los elementos del carrusel */
   display: flex;
   align-items: center;
   width: 100%;
@@ -15,6 +16,8 @@
   scroll-behavior: smooth;
   padding: 0.5rem;
   flex: 1;
+  position: relative;      /* para que el z-index surta efecto */
+  z-index: 0 ;   /* en todos los elementos del carrusel */
 }
 
 .cc-carousel::-webkit-scrollbar {
@@ -36,6 +39,8 @@
   box-shadow: 0 2px 6px rgba(0,0,0,0.1);
   transition: transform 0.2s;
   cursor: pointer;
+  position: relative;      /* para que el z-index surta efecto */
+  z-index: 0 ;   /* en todos los elementos del carrusel */
 }
 
 .cc-item:hover {
@@ -74,8 +79,8 @@
   padding: 0.3rem 0.6rem;
   border-radius: 50%;
   cursor: pointer;
-  position: relative; /* dentro del container */
-  z-index: 1;
+  position: relative;      /* para que el z-index surta efecto */
+  z-index: 0 ;   /* en todos los elementos del carrusel */
 }
 
 .cc-left {
