--- a/src/estilos/Layout.css
+++ b/src/estilos/Layout.css
@@ -7,6 +7,8 @@
 .main-content {
   display: flex;
   flex: 1;
+  position: relative;
+  z-index: 0;
 }
 
 .page-content {
@@ -14,4 +16,6 @@
   padding: 2rem;
   background-color: #f9f9f9;
   overflow-y: auto;
+  position: relative;
+  z-index: 0;
 }
