--- a/src/estilos/ProductoDetalleCliente.css
+++ b/src/estilos/ProductoDetalleCliente.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  padding: 1rem;
+  padding: 2rem 5rem;
 }
 
 .adp-back {
@@ -158,6 +158,13 @@
   margin-bottom: 0.5rem;
 }
 
+.adp-descripcion {
+  width: 70%;
+  background-color: #f1f1f1;
+  padding: 2rem;
+  border-radius: 10px;
+}
+
 .adp-descripcion h3 {
   margin: 0 0 0.5rem;
   font-size: 1.1rem;
@@ -171,7 +178,7 @@
 
 .adp-tiempo {
   margin-top: 1rem;
-  font-size: 1rem;
+  font-size: 1.1rem;
   color: #555;
 }
 
