--- a/src/estilos/Productos.css
+++ b/src/estilos/Productos.css
@@ -1,8 +1,14 @@
 .products-page {
-  background-color: #fff;
+  /* background-color: #fff;
   border-radius: 8px;
   padding: 1.5rem;
-  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+  box-shadow: 0 2px 4px rgba(0,0,0,0.1); */
+  width: 100%;
+  margin: 2rem auto;
+  background: #fff;
+  padding: 1.5rem;
+  border-radius: 8px;
+  box-shadow: 0 2px 12px rgba(0,0,0,0.1);
 }
 
 .products-page .header-insumo-producto {
@@ -14,7 +20,7 @@
   padding: 1rem;
 }
 
-.products-page h2 {
+.products-productos-page h2 {
   margin: 0;
   font-size: 1.5rem;
   color: #fff;
