--- a/src/estilos/PromocionDetalle.css
+++ b/src/estilos/PromocionDetalle.css
@@ -97,6 +97,13 @@
   margin: 0;
 }
 
+.pd-descripcion {
+  width: 70%;
+  background-color: #f1f1f1;
+  padding: 2rem;
+  border-radius: 10px;
+}
+
 .pd-descripcion h3 {
   margin: 0 0 0.25rem 0;
 }
