--- a/src/estilos/PromocionModal.css
+++ b/src/estilos/PromocionModal.css
@@ -121,8 +121,21 @@
   color: #555;
 }
 
+.pm-articles-table tbody tr td button {
+  padding: .5rem;
+  border-radius: 10px;
+  border: 1px solid #ccc;
+  cursor: pointer;
+  background-color: #eeebeb;
+  color: #000;
+}
+
+.pm-articles-table tbody tr td button:hover {
+  background-color: #dbdbdb;
+}
+
 .btn-add-article {
-  margin-top: 0.5rem;
+  /* margin-top: 0.5rem;
   align-self: flex-start;
   padding: 0.5rem 1rem;
   background: transparent;
@@ -130,7 +143,13 @@
   border-radius: 20px;
   color: #ffc107;
   font-weight: bold;
+  cursor: pointer; */
+  padding: .6rem 1.2rem;
+  border: 2px solid #FFC107;
+  background-color: #fff;
+  border-radius: 20px;
   cursor: pointer;
+  width: fit-content;
   transition: background 0.2s, color 0.2s;
 }
 
