--- a/src/estilos/PromocionTabla.css
+++ b/src/estilos/PromocionTabla.css
@@ -2,8 +2,14 @@
 
 /* CONTENEDOR PRINCIPAL */
 .products-page {
-  padding: 2rem;
-  background: #fafafa;
+  /* padding: 2rem;
+  background: #fafafa; */
+  width: 100%;
+  margin: 2rem auto;
+  background: #fff;
+  padding: 1.5rem;
+  border-radius: 8px;
+  box-shadow: 0 2px 12px rgba(0,0,0,0.1);
 }
 
 /* CABECERA: título + botón */
@@ -92,6 +98,33 @@
 .products-table td button:hover {
   color: #ffc107;
 }
+
+.products-table thead th:nth-child(1) {
+  width: 100px;
+  text-align: center;
+}
+
+.products-table tbody tr td:nth-child(1) {
+  text-align: center;
+}
+
+.products-table thead th:nth-child(2) {
+  width: 200px;
+}
+
+.products-table thead th:nth-child(3) {
+  width: 400px;
+  text-align: left;
+}
+
+.products-table tbody tr td:nth-child(3) {
+  text-align: left;
+}
+
+.products-table thead th:nth-child(9) {
+  text-align: center;
+}
+
 
 /* BOTÓN “VOLVER” */
 /* .btn-add {
