--- a/src/estilos/PromocionTabla.css
+++ b/src/estilos/PromocionTabla.css
@@ -125,7 +125,10 @@
   text-align: center;
 }
 
+.tdPromociones{
+  display: flex;;
 
+}
 /* BOTÓN “VOLVER” */
 /* .btn-add {
   display: inline-block;
